updated about javascript

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <p>C ⭐⭐⭐⭐<br>
         HTML ⭐⭐⭐⭐<br>
         CSS ⭐⭐⭐<br>
-        Python ⭐⭐
+        Python ⭐⭐<br>
+        Javascript⭐
     </p>
     <h3>Education</h3>
     <p>
