--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body background="a.jpg">
     <table>
         <tr><td><img src="dp-modified.png" alt="Profile Picture" height="150" width="150"></td>
-            <td><h1>AAKASH RAJ</h1><br><p>CSA First Year Student at KIIT  university. 
+            <td><h1>AAKASH RAJ</h1><br><p>CSE First Year Student at KIIT  university. 
                 <br>I am a web developer and I love cricket😊.</p></td>
        </tr>
     </table>
@@ -31,6 +31,7 @@
         <tr><td>📧: rajakash607@gmail.com</td></tr>
         <tr><td>🏠: Bajrangpuram road no.3<br>Bhagwanpur Muzaffarpur</td>
         <tr><td>📞: 9430627384</td></tr>
+        <tr><td><a href="https://instagram.com/aakash._0o7?igshid=ZDdkNTZiNTM=">Instagram</a> </td></tr>
     </table>
 </body>
 </html>
