--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body background="a.jpg">
+<body>
     <table>
         <tr><td><img src="dp-modified.png" alt="Profile Picture" height="150" width="150"></td>
             <td><h1>AAKASH RAJ</h1><br><p>CSE First Year Student at KIIT  university. 
@@ -14,24 +15,27 @@
        </tr>
     </table>
     <hr color="black">
-    <h3>Skills & languages</h3>
-    <p>C ⭐⭐⭐⭐<br>
+    <h3 class="aa">Skills & languages</h3>
+    <p class="aa">C ⭐⭐⭐⭐<br>
         HTML ⭐⭐⭐⭐<br>
-        CSS ⭐⭐⭐<br>
+        CSS ⭐⭐⭐⭐<br>
         Python ⭐⭐<br>
         Javascript⭐
     </p>
-    <h3>Education</h3>
-    <p>
+    <hr>
+    <h3 class="aa">Education</h3>
+    <p class="aa">
         Basic: Dav Public School <br>
-        Higher: KIIT
+        Higher: KIIT School of Computer Sciences
     </p>
+    <hr>
     <table border="1">
         <thead><th>Contact</th></thead>
         <tr><td>📧: rajakash607@gmail.com</td></tr>
         <tr><td>🏠: Bajrangpuram road no.3<br>Bhagwanpur Muzaffarpur</td>
         <tr><td>📞: 9430627384</td></tr>
-        <tr><td><a href="https://instagram.com/aakash._0o7?igshid=ZDdkNTZiNTM=">Instagram</a> </td></tr>
+        <tr><td><a href="https://instagram.com/aakash._0o7?igshid=ZDdkNTZiNTM=">Instagram</a> </td>
+            <tr><td><a href="https://github.com/rajakash607">Github</a> </td></tr>
     </table>
 </body>
 </html>
